Upgrade to AspectJ 1.9.9.1, Eclipse 4.23, Java 18
Signed-off-by: Alexander Kriegisch <Alexander@Kriegisch.name>